--- a/test/fixtures/roles.yml
+++ b/test/fixtures/roles.yml
@@ -1,11 +1,9 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+admin: {
+  id: 1,
+  name: admin
+}
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+employee_marketing: {
+  id: 2,
+  name: employee_marketing
+}
